# ChatbotMarketPlace-ChatBridge

./: .Dockerfile.template  .dockerignore  .env.template  .gitignore  Dockerfile  README.md  create_bot.py  pyproject.toml  requirements.txt  streamlit_app.py  test_streamlit_app.py
Chroma_db/: chroma.sqlite3
src/: ChatBridge.db  app.py  auth.py  autogenerated_email.py  bot_creation.py  bot_interaction.py  chat_history.py  chatbot.py  database.py  document_processor.py  embedding_generator.py  logger.py  metric.py  old_bot_interaction.py  old_document_processor.py  old_pages.py  pages.py  test  test.py  test_2.py  users.db
src/user_docs/faiz/HR/Chroma_db/: chroma.sqlite3
src/user_docs/faizraza/HRist/Chroma_db/: chroma.sqlite3
src/user_docs/faker/2/Chroma_db/: chroma.sqlite3
src/user_docs/mughees/3/Chroma_db/: chroma.sqlite3
src/user_docs/qwe/5/Chroma_db/: chroma.sqlite3
