[project]
name = "chatbotmarketplace-chatbridge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.23",
    "langchain-chroma>=0.2.2",
    "langchain-core>=0.3.51",
    "langchain-google-genai>=2.1.2",
    "langchain-redis>=0.2.0",
    "langchain-unstructured>=0.1.6",
    "python-dotenv>=1.1.0",
    "regex>=2024.11.6",
    "streamlit>=1.44.1",
    "unstructured>=0.17.2",
    "yagmail>=0.15.293",
]
